tests/errors/type_check/error_span/distinct_errors_carry_distinct_spans.sim
fn f() {
  x: i64;
  y: i64;
  entry:
    x = true;
    y = true;
    return
}