tests/errors/type_check/error_span/distinct_errors_carry_distinct_spans.err.expected
error: at 5:5: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is i64, RHS is bool
   |
 5 |     x = true;
   |     ^^^^^^^^
error: at 6:5: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is i64, RHS is bool
   |
 6 |     y = true;
   |     ^^^^^^^^
